--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>Rock Paper Scissors</title>
         <meta name="description" conent="Rock Paper Scissors game"
         <meta name="keywords" content="game">
-        <script src="javascript.js"></script>
+        <script src="javascript.js" defer></script>
     </head>
-
+<body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+</body>
 
 </html>
