Add display text to html and stop the game when score reaches 5 Testing multiple line commit messages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
         <script src="javascript.js" defer></script>
     </head>
 <body>
+    <div><h1>Welcome to Rock Paper Scissors!</h1></div>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <h2 id="winnerPara"></h2>
+    <h3 id="scorePara"></h3>
+    <p id="roundLogPara" style="white-space:pre;"></p>
 </body>
 
 </html>
